my third commit

--- a/my_work.html
+++ b/my_work.html
@@ -57,31 +57,31 @@
 				</div>
 
 				<div class="project_item">
-					<img class="project_image" src="images/project1.jpg" alt="">
+					<a href="#"><span class="hover_text">название</span><img class="project_image" src="images/project1.jpg" alt=""></a>
 					<p class="image_caption">www.shirtee.de</p>
 					<p class="project_info">Какая-либо неважная инфа о проекте...</p>
 				</div>
 
 				<div class="project_item">
-					<img class="project_image" src="images/project1.jpg" alt="">
+					<a href="#"><span class="hover_text">название</span><img class="project_image" src="images/project1.jpg" alt=""></a>
 					<p class="image_caption">www.shirtee.de</p>
 					<p class="project_info">Какая-либо неважная инфа о проекте...</p>
 				</div>
 
 				<div class="project_item">
-					<img class="project_image" src="images/project1.jpg" alt="">
+					<a href="#"><span class="hover_text">название</span><img class="project_image" src="images/project1.jpg" alt="">
 					<p class="image_caption">www.shirtee.de</p>
-					<p class="project_info">Какая-либо неважная инфа о проекте...</p>
+					<p class="project_info">Какая-либо неважная инфа о проекте...</p></a>
 				</div>
 
 				<div class="project_item">
-					<img class="project_image" src="images/project1.jpg" alt="">
+					<a href="#"><span class="hover_text">название</span><img class="project_image" src="images/project1.jpg" alt=""></a>
 					<p class="image_caption">www.shirtee.de</p>
 					<p class="project_info">Какая-либо неважная инфа о проекте...</p>
 				</div>
 
 				<div class="addnew">
-					<img class="addnew_img" src="images/addnew.png" alt="">
+					<a href="#"><img class="addnew_img" src="images/addnew.png" alt=""></a>
 					
 				</div>
 
